fix: vertical scrollbar rail height

--- a/packages/clients/data-view/src/public/styles/scrollbar.css
+++ b/packages/clients/data-view/src/public/styles/scrollbar.css
@@ -23,7 +23,7 @@
   opacity: 0;
   transition: background-color .2s linear, opacity .2s linear;
   -webkit-transition: background-color .2s linear, opacity .2s linear;
-  height: 15px;
+  height: 2px;
   /* there must be 'bottom' or 'top' for ps__rail-x */
   bottom: 0px;
   /* please don't change 'position' */
